Base file system created. Header and source files for Board and Crawler classes with constructors, getters/setters and functions definitions added.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,10 @@ project(bls2)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(bls2 main.cpp)
+add_executable(bls2 main.cpp
+        src/Board.cpp
+        src/Board.h
+        src/Crawler.cpp
+        src/Crawler.h
+        src/utils/Direction.h
+        src/utils/Position.h)
