Abstract class Bug created

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,6 @@ add_executable(bls2 main.cpp
         src/Crawler.cpp
         src/Crawler.h
         src/utils/Direction.h
-        src/utils/Position.h)
+        src/utils/Position.h
+        src/utils/Bug.h
+        src/utils/Bug.cpp)
